<resources>
    <string name="app_name">UberClone</string>
    <string name="log_in_with_phone_number">Log in with phone number</string>
    <string name="log_in_with_google">Log in with Google</string>
    <string name="continue_text">Continue</string>
    <string name="register_text">Let\'s start with creating your account</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="phone_number">+1 650–555-1234</string>
    <string name="title_activity_driver_home">DriverHomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_log_out">Log out</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="gps">Gps</string>
    <string name="rating">0.0</string>

    <string name="title_camera">Camera</string>
    <string name="title_gallery">Gallery</string>
    <string name="cancel">Cancel</string>
    <string name="choose_photo">Choose a photo</string>
    <string name="permission_granted">Permission granted</string>
    <string name="permission_denied">Permission denied</string>
    <string name="camera_permission">Access camera granted</string>
    <string name="camera_denied">Access camera denied</string>
    <string name="camera_permission_message">We need your permission to access the camera</string>
    <string name="gallery_permission">Access gallery granted</string>
    <string name="gallery_denied">Access gallery denied</string>
    <string name="gallery_permission_message">We need your permission to access the camera</string>
    <string name="information_update_success">Information updated successfully</string>
    <string name="uploading">Uploading:</string>

    <string name="log_out_title">Log out</string>
    <string name="log_out_message">Do you really want to log out?</string>
    <string name="log_out_negative_button">Cancel</string>
    <string name="log_out_positive_button">Log out</string>
    <string name="log_out_k_toasty">Log out successfully</string>

    <string name="welcome">Welcome</string>
    <string name="permission_denied_part_1">Permission</string>
    <string name="permission_denied_part_2">was denied</string>
    <string name="decline">Decline</string>
    <string name="uber">Uber</string>
    <string name="_4_75">4.75</string>
    <string name="_2_min">2 min</string>
    <string name="_0_4_km">0.4 km</string>
    <string name="permission_required">Permission required</string>
    <string name="token_not_found">Token not found</string>
    <string name="decline_failed">Decline failed</string>
    <string name="decline_success">You have declined this request</string>
    <string name="rider_name">Plo</string>
    <string name="start_uber">Start Uber</string>
    <string name="rider_not_found">Rider not found with key</string>
    <string name="accept_failed">Accept failed</string>
</resources>