<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment"
    android:id="@+id/root_layout">

    <fragment
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:name="com.google.android.gms.maps.SupportMapFragment"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/gps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_gravity="bottom|right"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="165dp"
        android:backgroundTint="@color/white"
        app:borderWidth="0dp"
        android:src="@drawable/ic_baseline_my_location_24"
        android:contentDescription="@string/gps"
        android:tint="@color/colorAccent"
        android:tintMode="@color/colorAccent"/>

    <com.google.android.material.chip.Chip
        android:id="@+id/chip_decline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/decline"
        android:textColor="@color/white"
        app:chipBackgroundColor="@color/colorAccent"
        app:chipIcon="@drawable/ic_baseline_clear_24"
        app:chipIconTint="@color/white"
        android:visibility="gone"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/accept_cv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_margin="8dp"
        app:cardBackgroundColor="@color/colorAccent"
        app:cardCornerRadius="8dp"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal">

                <TextView
                    android:id="@+id/uber_type_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="8dp"
                    android:text="@string/uber"
                    android:textColor="@color/white"
                    android:textSize="18sp"/>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:clickable="false">

                    <com.mikhaellopez.circularprogressbar.CircularProgressBar
                        android:id="@+id/circular_progress_bar"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        app:cpb_background_progressbar_color="@color/white"
                        app:cpb_background_progressbar_width="3dp"
                        app:cpb_progress="0"
                        app:cpb_progress_direction="to_right"
                        app:cpb_progress_max="100"
                        app:cpb_progressbar_color="@color/progress_bar_color"
                        app:cpb_progressbar_width="3dp"
                        app:cpb_round_border="false"/>

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_centerInParent="true"
                        android:clickable="false"
                        android:src="@drawable/ic_baseline_person_24"
                        android:tint="@color/white"/>
                </RelativeLayout>

                <TextView
                    android:id="@+id/rating_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="8dp"
                    android:drawableEnd="@drawable/ic_baseline_star_24"
                    android:text="@string/_4_75"
                    android:textColor="@color/white"
                    android:textSize="18sp"/>

            </LinearLayout>

            <TextView
                android:id="@+id/estimate_time_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:text="@string/_2_min"
                android:textColor="@color/white"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/estimate_distance_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/_0_4_km"
                android:textColor="@color/white"
                android:textSize="16sp"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/start_uber_cv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_margin="8dp"
        app:cardCornerRadius="8dp"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_keyboard_arrow_down_24"
                    android:tint="@color/black"/>

                <ImageView
                    android:id="@+id/start_uber_account_circle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/ic_baseline_account_circle_24"
                    android:tint="@color/black"/>

                <TextView
                    android:id="@+id/start_uber_estimate_time_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@+id/start_uber_account_circle"
                    android:layout_centerVertical="true"
                    android:text="@string/_2_min"/>

                <TextView
                    android:id="@+id/start_uber_estimate_distance_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/start_uber_account_circle"
                    android:layout_centerVertical="true"
                    android:text="@string/_0_4_km"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/ic_baseline_format_list_bulleted_24"
                    android:tint="@color/black"/>

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:background="@color/dark_gray_color"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/start_uber_more_vert_icon"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_baseline_perm_phone_msg_24"
                    android:tint="@color/black"/>

                <TextView
                    android:id="@+id/start_uber_rider_name_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/rider_name"
                    android:textSize="22sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>

                <ImageView
                    android:id="@+id/start_uber_phone_icon"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/ic_baseline_more_vert_24"
                    android:tint="@color/black"/>

            </RelativeLayout>

            <com.kusu.loadingbutton.LoadingButton
                android:id="@+id/start_uber_start_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/start_uber"
                android:textColor="@color/white"
                app:lb_buttonColor="@color/star_uber_btn_color"
                app:lb_isCircular="false"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</FrameLayout>